# onetoken-ctp

./: 1token-ctp.sln  README.md
1token-ctp/: 1token-ctp.vcxproj  1token-ctp.vcxproj.filters  CMakeLists.txt
1token-ctp/common/include/asio/impl/: src.hpp
1token-ctp/common/include/gzip/: decompress.hpp
1token-ctp/common/include/pplx/: pplxtasks.h
1token-ctp/examples/: example.cpp
1token-ctp/include/: error_code.h  http_client.h  onetoken_interface.h  onetoken_market_api.h  onetoken_trade_api.h  openssl_lock.h  quote.h  rest_quote.h  rest_trade.h  singleton.h  structs.h  thread_pool.h  utils.h  ws_quote.h  ws_quote_candle.h  ws_quote_tick.h
1token-ctp/include/common/: zconf.h
1token-ctp/include/common/pplx/: threadpool.h
1token-ctp/lib/: cpprest140_2_10.lib  zlib.lib
1token-ctp/src/: compatible.cpp  http_client.cpp  onetoken_market_api.cpp  onetoken_trade_api.cpp  quote.cpp  rest_quote.cpp  rest_trade.cpp  thread_pool.cpp  utils.cpp  ws_quote.cpp  ws_quote_candle.cpp  ws_quote_tick.cpp
